Refactor guidance content and add breadcrumb

--- a/app/views/pages/_content.html.erb
+++ b/app/views/pages/_content.html.erb
@@ -1,6 +1,16 @@
 <div class="govuk-grid-column govuk-body">
+  <div class="govuk-breadcrumbs">
+    <ol class="govuk-breadcrumbs__list">
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="/">Home</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item" aria-current="page">Guidance</li>
+    </ol>
+    <br>
+  </div>
+
   <div class="govuk-section-break--visible">
-    <h1 class="govuk-heading-l">Help</h1>
+    <h1 class="govuk-heading-l">Guidance</h1>
     <p>Contents</p>
     <ul class="govuk-list--bullet">
       <li>
