--- a/app/views/pages/guidance.html.erb
+++ b/app/views/pages/guidance.html.erb
@@ -13,17 +13,17 @@
     <p>You will need to work together to complete the set-up.</p>
 
     <ul>
-      <li>Task 1: Senior Probation Officer (SPO) </li>
-      <li>Task 2: Local System Administrator </li>
-      <li>Task 3: Local System Administrator</li>
-      <li>Task 4: Senior Probation Officer (SPO) / Case admin</li>
-      <li>Task 5: Senior Probation Officer (SPO) / Case admin</li>
-      <li>Task 6: Senior Probation Officer (SPO)</li>
+      <li><%=link_to "Task 1", "guidance_step1" %>: Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU)</li>
+      <li><%=link_to "Task 2", "guidance_step2" %>: Local System Administrator</li>
+      <li><%=link_to "Task 3", "guidance_step3" %>: Local System Administrator</li>
+      <li><%=link_to "Task 4", "guidance_step4" %>: Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) / Case admin</li>
+      <li><%=link_to "Task 5", "guidance_step5" %>: Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) / Case admin</li>
+      <li><%=link_to "Task 6", "guidance_step6" %>: Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU)</li>
     </ul>
 
     <p>When you are set up, use Firefox to sign in to the service using your NOMIS ID
         and password at:
-      <%= link_to("https://moic.service.justice.gov.uk", "https://moic.service.justice.gov.uk") %>
+      <%= link_to "https://moic.service.justice.gov.uk", "https://moic.service.justice.gov.uk" %>
     </p>
   </div>
 </div>
