--- a/app/views/pages/guidance_step1.html.erb
+++ b/app/views/pages/guidance_step1.html.erb
@@ -20,18 +20,18 @@
 
     <p><%=image_tag("spreadsheet_image.png") %></p>
 
-    <p>Send the information to the allocations team</p>
+    <h2>Send the information to the allocations team</h2>
 
     <p>Send the names, roles and email addresses to: <%= mail_to("hmoic@digital.justice.gov.uk")%></p>
 
     <p>We will give everyone access to the new service and let you know when this has been done.</p>
 
-    <p>Share the information with the Local System Administrator (LSA)</p>
+    <h2>Share the information with the Local System Administrator (LSA)</h2>
 
     <p>You need to send the same list of names, roles and, (for POMs only),
       email addresses to the LSA so that they can complete
-      <%= link_to "task 2", "guidance_step2" %>.</p>
+      <%= link_to "Task 2: Set up access in Digital Prison Services", "guidance_step2" %>.</p>
 
-    <p>They will also need access to this guide.</p>
+    <p>They will also need to access this guide.</p>
   </div>
 </div>
