--- a/app/views/pages/guidance_step4.html.erb
+++ b/app/views/pages/guidance_step4.html.erb
@@ -9,7 +9,7 @@
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Warning</span>
-        Please note: This task can’t be started until task 2 has been completed
+        Please note: This task can’t be started until <%=link_to "Task 2: Set up access in Digital Prison Services", "guidance_step2" %> has been completed
       </strong>
     </div>
 
