--- a/app/views/pages/guidance_step5.html.erb
+++ b/app/views/pages/guidance_step5.html.erb
@@ -9,7 +9,7 @@
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Warning</span>
-        Please note: This task can’t be started until task 3 has been completed
+        Please note: This task can’t be started until <%=link_to "Task 3: Set up POMs in NOMIS","guidance_step3" %> has been completed
       </strong>
     </div>
 
