--- a/app/views/pages/guidance_step1.html.erb
+++ b/app/views/pages/guidance_step1.html.erb
@@ -22,7 +22,7 @@
 
     <h2>Send the information to the allocations team</h2>
 
-    <p>Send the names, roles and email addresses to: <%= mail_to("hmoic@digital.justice.gov.uk")%></p>
+    <p>Send the names, roles and email addresses to: <%= mail_to("moic@digital.justice.gov.uk")%></p>
 
     <p>We will give everyone access to the new service and let you know when this has been done.</p>
 
