Add inset text for whom should complete the task

--- a/app/views/pages/guidance_step5.html.erb
+++ b/app/views/pages/guidance_step5.html.erb
@@ -1,6 +1,9 @@
 <%= render :partial => "content", locals: { page: 5 } %>
 
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Update prisoner information</h1>
+<h2 class="govuk-heading-l govuk-!-margin-bottom-5">Update prisoner information</h2>
+<div class="govuk-inset-text">
+  Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) / Case admin task
+</div>
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
