--- a/app/views/pages/guidance.html.erb
+++ b/app/views/pages/guidance.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "content", locals: { page: 0 } %>
 
-<h1 class="govuk-heading-l govuk-!-margin-top-5">Get started with the allocations service</h1>
+<h2 class="govuk-heading-l">Get started with the allocations service</h2>
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
@@ -27,3 +27,4 @@
     </p>
   </div>
 </div>
+<br>
