--- a/app/views/pages/guidance_step1.html.erb
+++ b/app/views/pages/guidance_step1.html.erb
@@ -1,6 +1,9 @@
 <%= render :partial => "content", locals: { page: 1 }%>
 
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">List everyone using the service</h1>
+<h2 class="govuk-heading-l">List everyone using the service</h2>
+<div class="govuk-inset-text">
+  Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) task
+</div>
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
