--- a/app/views/pages/guidance_step2.html.erb
+++ b/app/views/pages/guidance_step2.html.erb
@@ -1,6 +1,9 @@
 <%= render :partial => "content", locals: { page: 2 } %>
 
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Set up access in Digital Prison Services</h1>
+<h2 class="govuk-heading-l govuk-!-margin-bottom-5">Set up access in Digital Prison Services</h2>
+<div class="govuk-inset-text">
+  Local System Administrator (LSA) task
+</div>
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
