--- a/app/views/pages/guidance_step4.html.erb
+++ b/app/views/pages/guidance_step4.html.erb
@@ -1,7 +1,9 @@
 <%= render :partial => "content", locals: { page: 4 } %>
 
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Update POM profiles</h1>
-
+<h2 class="govuk-heading-l govuk-!-margin-bottom-5">Update POM profiles</h2>
+<div class="govuk-inset-text">
+  Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) / Case admin task
+</div>
 <div class="govuk-grid-column">
   <div class="govuk-body">
 
