--- a/app/views/pages/guidance_step6.html.erb
+++ b/app/views/pages/guidance_step6.html.erb
@@ -1,6 +1,9 @@
 <%= render :partial => "content", locals: { page: 6 } %>
 
-<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Start making allocations</h1>
+<h2 class="govuk-heading-l govuk-!-margin-bottom-5">Start making allocations</h2>
+<div class="govuk-inset-text">
+  Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) task
+</div>
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
