--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,4 +1,6 @@
 <div class="govuk-grid-column govuk-body">
+  <p><%= back_link %></p>
+
   <h1 class="govuk-heading-xl">Help</h1>
 
     <h3 class="govuk-heading-m">Guidance</h3>
