Add help link in footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,6 +10,9 @@
           <li class="govuk-footer__list-item">
             <a class="govuk-footer__link" href="https://www.research.net/r/MM8TNLW">Feedback</a>
           </li>
+          <li class="govuk-footer__list-item">
+            <a class="govuk-footer__link" href="/help">Help</a>
+          </li>
         </ul>
       </div>
     </div>
