--- a/app/views/summary/pending.html.erb
+++ b/app/views/summary/pending.html.erb
@@ -50,11 +50,11 @@
           <% end %>
         </td>
         <td aria-label="Waiting" class="govuk-table__cell"><%= offender.awaiting_allocation_for %> days</td>
-        <td aria-label="Action" class="govuk-table__cell ">
+        <td aria-label="Action" class="govuk-table__cell" id="<%= "edit_#{offender.offender_no}" %>">
           <% if auto_delius_import_enabled?(@prison) %>
             <%= link_to "Update", prison_case_information_path(@prison, offender.offender_no) %>
           <% else %>
-            <%= link_to "Update", prison_case_information_path(@prison, offender.offender_no) %></td>
+            <%= link_to "Edit", new_prison_case_information_path(@prison, offender.offender_no) %></td>
           <% end %>
         </td>
       </tr>
@@ -68,6 +68,4 @@
               :page_data => @page_meta,
               :param_name => 'page',
           }) %>
-</section>
-
 </section>
