remove 'change' links from allocation display screen if auto_delius_import enabled

--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -29,7 +29,9 @@
       <td class="govuk-table__cell">Tiering calculation</td>
       <td class="govuk-table__cell table_cell__left_align">
         Tier <%= @prisoner.tier %>
-        <a class="govuk-link pull-right" href="<%= edit_prison_case_information_path(@prison, @prisoner.offender_no) %>">Change</a>
+        <% unless auto_delius_import_enabled?(@prison) %>
+          <a class="govuk-link pull-right" href="<%= edit_prison_case_information_path(@prison, @prisoner.offender_no) %>">Change</a>
+        <% end %>
       </td>
     </tr>
     <tr class="govuk-table__row">
@@ -53,14 +55,18 @@
       <td class="govuk-table__cell">Last known address in Wales</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= humanized_bool(@prisoner.omicable) %>
-        <a class="govuk-link pull-right" href="<%= edit_prison_case_information_path(@prison, @prisoner.offender_no) %>">Change</a>
+        <% unless auto_delius_import_enabled?(@prison) %>
+          <a class="govuk-link pull-right" href="<%= edit_prison_case_information_path(@prison, @prisoner.offender_no) %>">Change</a>
+        <% end %>
       </td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Service provider</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= service_provider_label(@prisoner.case_allocation) %>
-        <a class="govuk-link pull-right" href="<%= edit_prison_case_information_path(@prison, @prisoner.offender_no) %>">Change</a>
+        <% unless auto_delius_import_enabled?(@prison) %>
+          <a class="govuk-link pull-right" href="<%= edit_prison_case_information_path(@prison, @prisoner.offender_no) %>">Change</a>
+        <% end %>
       </td>
     </tr>
     </tbody>
