--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,13 +5,13 @@
         <h2 class="govuk-footer__heading govuk-heading-m">Useful Links</h2>
         <ul class="govuk-footer__list">
           <li class="govuk-footer__list-item">
-            <a class="govuk-footer__link" href="/guidance">Guidance</a>
+            <%= link_to("Guidance", "/guidance") %>
           </li>
           <li class="govuk-footer__list-item">
-            <a class="govuk-footer__link" href="https://www.research.net/r/MM8TNLW">Feedback</a>
+            <%= link_to("Feedback", "https://www.research.net/r/MM8TNLW", target: "_blank") %>
           </li>
           <li class="govuk-footer__list-item">
-            <a class="govuk-footer__link" href="/help">Help</a>
+            <%= link_to("Help", "/help") %>
           </li>
         </ul>
       </div>
