--- a/app/views/summary/pending.html.erb
+++ b/app/views/summary/pending.html.erb
@@ -2,9 +2,9 @@
   <%= render '/layouts/prison_switcher' %>
 <% end %>
 
-<h1 class="govuk-heading-xl">Allocations</h1>
+<h1 class="govuk-heading-xl govuk-!-margin-bottom-4">Allocations</h1>
 
-<div class="govuk-!-margin-bottom-6 govuk-!-margin-top-6">
+<div class="govuk-!-margin-bottom-4">
   <%= render "search/search_box" %>
 </div>
 <%= render(:partial => 'tabs_start', :locals => {:active => :pending}) %>
