--- a/app/views/summary/pending.html.erb
+++ b/app/views/summary/pending.html.erb
@@ -52,7 +52,7 @@
             Not provided
           <% end %>
         </td>
-        <td aria-label="Waiting" class="govuk-table__cell"><%= offender.awaiting_allocation_for %> days</td>
+        <td aria-label="Waiting" class="govuk-table__cell"><%=  start_date(@prison_dates, offender.offender_no) %> days</td>
         <td aria-label="Action" class="govuk-table__cell" id="<%= "edit_#{offender.offender_no}" %>">
           <% if auto_delius_import_enabled?(@prison) %>
             <%= link_to "Update", prison_case_information_path(@prison, offender.offender_no) %>
