Establish if offender has been recalled
We need to know whether an offender has been recalled as if this is the
case then how long they have left to serve will be used to determine
whether case responsibility remains in the community, or is transferred
back to custody.  At present, we don't have the logic for this so have
added the recall check to the debugging page as a starting point.

Another ticket will be added to the backlog so the team can understand
the exact logic required around the responsibility calculation.

--- a/app/views/debugging/debugging.html.erb
+++ b/app/views/debugging/debugging.html.erb
@@ -48,6 +48,11 @@
       <td class="govuk-table__cell table_cell__left_align">
         <%= humanized_bool(@offender.sentenced?) %>
     </tr>
+    <tr class="govuk-table__row" id="recalled"">
+      <td class="govuk-table__cell">Recalled?</td>
+      <td class="govuk-table__cell table_cell__left_align">
+        <%= humanized_bool(@offender.recalled?) %>
+    </tr>
     <tr class="govuk-table__row" id="over-18">
       <td class="govuk-table__cell govuk-!-width-one-half">Over 18?</td>
       <td class="govuk-table__cell table_cell__left_align govuk-!-width-one-half"><%= humanized_bool(@offender.over_18?) %></td>
