--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,7 +3,6 @@
 <div class="govuk-grid-row dashboard-row">
 
   <div class="govuk-grid-column-two-thirds">
-    <%= form_tag(contact_path, method: :post, id: "contact_form") do %>
       <div class="govuk-form-group">
         <label class="govuk-label" for="more-detail">
           You can use this form to ask a question, report a problem or suggest an improvement.
@@ -19,8 +18,24 @@
             </span>
           <% end %>
         <% end %>
-        <textarea class="govuk-textarea" id="more-detail" name="more_detail" rows="10" aria-describedby="more-detail-hint"></textarea>
+        <%= form_tag(contact_path, method: :post, id: "contact_form") do %>
+          <div class="govuk-form-group">
+              <%= label_tag "email_address", "Email address", class: 'govuk-label' %>
+              <%= email_field_tag("email_address", nil, id: "email_address", class: "govuk-input") %>
+          </div>
+          <div class="govuk-form-group">
+              <%= label_tag "name", "Name", class: 'govuk-label' %>
+              <%= text_field_tag("name", nil, id: "name", class: "govuk-input") %>
+          </div>
+          <div class="govuk-form-group">
+            <%= label_tag "prison", "Prison name", class: 'govuk-label' %>
+            <%= text_field_tag("prison", nil, id: "prison", class: "govuk-input") %>
+          </div>
+          <div class="govuk-form-group">
+            <textarea class="govuk-textarea" id="more-detail" name="more_detail" rows="10" aria-describedby="more-detail-hint"></textarea>
+          </div>
       </div>
+
 
       <button class="govuk-button" type="submit">Submit</button>
     <% end %>
