--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,7 +2,7 @@
 
 <div class="govuk-grid-row dashboard-row">
 
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-one-third">
       <div class="govuk-form-group">
         <label class="govuk-label" for="more-detail">
           You can use this form to ask a question, report a problem or suggest an improvement.
@@ -28,10 +28,14 @@
               <%= text_field_tag("name", nil, id: "name", class: "govuk-input") %>
           </div>
           <div class="govuk-form-group">
+            <%= label_tag "Role", "Role", class: 'govuk-label' %>
+            <%= text_field_tag("role", nil, id: "role", class: "govuk-input") %>
+          </div>
+          <div class="govuk-form-group">
             <%= label_tag "prison", "Prison name", class: 'govuk-label' %>
             <%= text_field_tag("prison", nil, id: "prison", class: "govuk-input") %>
           </div>
-          <div class="govuk-form-group">
+          <div class="govuk-form-group ">
             <textarea class="govuk-textarea" id="more-detail" name="more_detail" rows="10" aria-describedby="more-detail-hint"></textarea>
           </div>
       </div>
