[POM-307] Setup Zendesk
In order for the team to effectively and efficiently manage queries
regarding the service we have agreed to use Zendesk.  At present the
team email address is getting hammered with requests each day and it's
proving difficult to manage/track where each query is at.

This PR:
* Implements the Zendesk API & sets up a client
* Creates a new model for the help form, and implements validations
* Implements the agreed design and content for the help page
* Adds the required Zendesk credentials
* Hooks up the back and front end

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,6 +2,12 @@
   <%= render '/layouts/prison_switcher' %>
 <% end %>
 
+<% if notice.present? %>
+  <p class="notification govuk-!-margin-bottom-9" role="group" aria-labelledby="notice-heading">
+    <%= notice %>
+  </p>
+<% end %>
+
 <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">Dashboard</h1>
 
 <div class="govuk-!-margin-bottom-4">
