--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,11 +1,11 @@
 <% if current_user.present? %>
   <div class="govuk-!-padding-bottom-4">
-    <%= link_to 'Home', prison_dashboard_index_path(@contact.prison) %>
+    <%= link_to 'Home', prison_dashboard_index_path(@user.active_case_load_id) %>
   </div>
 <% end %>
 
 <% if notice.present? %>
-  <p class="notification govuk-!-margin-bottom-9" role="group" aria-labelledby="notice-heading">
+  <p class="notification govuk-!-margin-bottom-9" job_type="group" aria-labelledby="notice-heading">
     <%= notice %>
   </p>
 <% end %>
@@ -33,7 +33,7 @@
       <p class="govuk-body">Complete this form for technical help</p>
 
       <%= form_tag(help_path, method: :post, id: "help_form") do %>
-        <div class="<%= class_type(@contact.errors) %>">
+        <div class="<%= field_error(@contact.errors, :name) %>">
           <%= label_tag "Full name", "Full name", class: 'govuk-label' %>
           <% if @contact.errors[:name].present? %>
                   <span class="govuk-error-message">
@@ -42,7 +42,7 @@
           <% end %>
           <%= text_field_tag("name", @contact.name, id: "name", class: "govuk-input") %>
         </div>
-        <div class="<%= class_type(@contact.errors) %>">
+        <div class="<%= field_error(@contact.errors, :email_address) %>">
           <%= label_tag "email_address", "Email address", class: 'govuk-label' %>
           <% if @contact.errors[:email_address].present? %>
                 <span class="govuk-error-message">
@@ -51,32 +51,32 @@
           <% end %>
           <%= email_field_tag("email_address", @contact.email_address, id: "email_address", class: "govuk-input") %>
         </div>
-        <div class="<%= class_type(@contact.errors) %>">
-          <%= label_tag "Your role", "Your role", class: 'govuk-label' %>
-          <% if @contact.errors[:role].present? %>
+        <div class="<%= field_error(@contact.errors, :job_type) %>">
+          <%= label_tag "Your job role", "Your job role", class: 'govuk-label' %>
+          <% if @contact.errors[:job_type].present? %>
                   <span class="govuk-error-message">
-                    <%= @contact.errors[:role].first %>
+                    <%= @contact.errors[:job_type].first %>
                   </span>
           <% end %>
-          <%= text_field_tag("role", nil, id: "role", class: "govuk-input") %>
+          <%= text_field_tag("job_type", nil, id: "job_type", class: "govuk-input") %>
         </div>
-        <div class="<%= class_type(@contact.errors) %>">
+        <div class="<%= field_error(@contact.errors, :prison) %>">
           <%= label_tag "prison", "Prison name", class: 'govuk-label' %>
           <% if @contact.errors[:prison].present? %>
                   <span class="govuk-error-message">
                     <%= @contact.errors[:prison].first %>
                   </span>
           <% end %>
-          <%= text_field_tag("prison", PrisonService.name_for(@contact.prison), id: "prison", class: "govuk-input") %>
+          <%= text_field_tag("prison", @contact.prison, id: "prison", class: "govuk-input") %>
         </div>
-        <div class="<%= class_type(@contact.errors) %>">
+        <div class="<%= field_error(@contact.errors, :message) %>">
           <%= label_tag "Describe what you need help with", "Describe what you need help with", class: 'govuk-label' %>
-          <% if @contact.errors[:body].present? %>
+          <% if @contact.errors[:message].present? %>
                   <span class="govuk-error-message">
-                    <%= @contact.errors[:body].first %>
+                    <%= @contact.errors[:message].first %>
                   </span>
           <% end %>
-          <%= text_area_tag("body", nil, rows: 10, id: "body", class: "govuk-textarea") %>
+          <%= text_area_tag("message", nil, rows: 10, id: "message", class: "govuk-textarea") %>
         </div>
       </div>
       <button class="govuk-button" type="submit">Submit</button>
