Handover date calculation
Currently the calculation of the offender’s handover date is done in a view helper.
This PR moves the handover calculations to a service - HandoverDateService. The tests
associated with the handover calculations have been moved out of the helper_spec and into
the service_spec.

The handover methods have now been added to the OffenderBase class and called directly
in the views.

--- a/app/views/prisoners/_prisoner_information.html.erb
+++ b/app/views/prisoners/_prisoner_information.html.erb
@@ -14,7 +14,7 @@
       <tr class="govuk-table__row">
         <td class="govuk-table__cell govuk-!-width-one-half">Handover start date</td>
         <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
-          <% handover_date, reason = handover_start_date(@prisoner) %>
+          <% handover_date, reason =  @prisoner.handover_start_date %>
           <%= format_date(handover_date) %>
           <span class="handover-reason">(<%= reason %>)</span>
         </td>
@@ -22,7 +22,7 @@
       <tr class="govuk-table__row">
         <td class="govuk-table__cell govuk-!-width-one-half">Responsibility Handover</td>
         <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half">
-          <% handover_date, reason = responsibility_handover_date(@prisoner) %>
+          <% handover_date, reason = @prisoner.responsibility_handover_date %>
           <%= format_date(handover_date, replacement: 'Unknown - missing MAPPA info') %>
           <span class="handover-reason">(<%= reason %>)</span>
         </td>
