--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,10 +2,16 @@
   <%= render '/layouts/prison_switcher' %>
 <% end %>
 
+<% if notice.present? %>
+  <p class="notification govuk-!-margin-bottom-9" role="group" aria-labelledby="notice-heading">
+    <%= notice %>
+  </p>
+<% end %>
+
 <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">Dashboard</h1>
 
 <div class="govuk-!-margin-bottom-4">
-<%= render "search/search_box" %>
+  <%= render "search/search_box" %>
 </div>
 
 <h2 class="govuk-heading-m no-bottom-margin">Allocate a prisoner to an offender manager</h2>
