Upgrade to v3 of the govuk design system
v3 of the design system has been released and so this PR updates the
version used to bring it up to date.

--- a/app/assets/stylesheets/gov_uk.scss
+++ b/app/assets/stylesheets/gov_uk.scss
@@ -2,4 +2,4 @@ $govuk-global-styles: true;
 $govuk-image-url-function: "image-url";
 $govuk-font-url-function: "asset-url";
 
-@import "govuk-frontend/all";
+@import "govuk/all";
