--- a/app/views/poms/index.html.erb
+++ b/app/views/poms/index.html.erb
@@ -5,12 +5,12 @@
 
 <h1 class="govuk-heading-xl">Prison Offender Managers</h1>
 
-<div class="govuk-tabs" data-module="tabs">
+<div class="govuk-tabs" data-module="govuk-tabs">
   <h2 class="govuk-tabs__title">
     Prison Offender Managers
   </h2>
   <ul class="govuk-tabs__list" role='tablist'>
-    <li class="govuk-tabs__list-item">
+    <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
       <a class="govuk-tabs__tab" href="#active">
         Active (<%= @active_poms.count %>)
       </a>
@@ -21,6 +21,8 @@
       </a>
     </li>
   </ul>
+
   <%= render 'active' %>
   <%= render 'inactive' %>
+
 </div>
