--- a/app/views/prisoners/_community_information.html.erb
+++ b/app/views/prisoners/_community_information.html.erb
@@ -5,20 +5,20 @@
       <td class="govuk-table__cell govuk-!-width-one-half"></td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell govuk-!-width-one-half">COM</td>
-      <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half"></td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell">Service provider</td>
-      <td class="govuk-table__cell table_cell__left_align"></td>
-    </tr>
-    <tr class="govuk-table__row">
       <td class="govuk-table__cell">Local divisional unit (LDU)</td>
       <td class="govuk-table__cell table_cell__left_align"></td>
     </tr>
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell">Last known address in Wales</td>
+      <td class="govuk-table__cell">Local divisional unit (LDU) email address</td>
       <td class="govuk-table__cell table_cell__left_align"></td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell">Team</td>
+      <td class="govuk-table__cell table_cell__left_align"></td>
+    </tr>
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell govuk-!-width-one-half">COM</td>
+      <td class="govuk-table__cell table_cell__left_align  govuk-!-width-one-half"></td>
     </tr>
   </tbody>
 </table>
