Fix debugging page
A recent change to the MovementApi mean that we started getting all
movements for an offender, rather than just the latest.  The debugging
page displays the last movement, but as they're not returned in date
order it meant it could be showing an old movement.  Therefore this PR
adds the api call to get just the latest movement for an offender to
ensure the debugging page shows the right information.

--- a/app/views/debugging/debugging.html.erb
+++ b/app/views/debugging/debugging.html.erb
@@ -209,7 +209,7 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__header govuk-!-width-one-half" scope="row">Last recorded movement</td>
       <td class="govuk-table__cell govuk-!-width-one-half"></td>
-    <tr class="govuk-table__row">
+    <tr class="govuk-table__row" id="movement_date">
       <td class="govuk-table__cell">Movement date</td>
       <td class="govuk-table__cell table_cell__left_align">
         <%= format_date(@movements.create_date_time) %>
