--- a/app/views/summary/unallocated.html.erb
+++ b/app/views/summary/unallocated.html.erb
@@ -22,6 +22,12 @@
 <%= render(:partial => 'tabs_start', :locals => {:active => :unallocated}) %>
 
 <section class="govuk-tabs__panel" id="awaiting-allocation">
+  <%= render(
+          :partial => 'shared/kaminari',
+          :locals => {
+              :data => @summary.offenders,
+          }) %>
+
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
@@ -72,10 +78,9 @@
   </table>
 
   <%= render(
-          :partial => 'shared/pagination',
+          :partial => 'shared/kaminari',
           :locals => {
-              :page_data => @page_meta,
-              :param_name => 'page',
+              :data => @summary.offenders,
           }) %>
 
 </section>
