Add allocation history link to Prisoner page
The prisoner information page that a POM accesses via their caseload
page needs to display a link to the allocation history page to reflect
the current service design.

As part of this PR I have also removed the last_event method from the
AllocationVersion model and added it to the OffenderHelper module as
really is a view helper.

I have also updated the "Back" link on the allocation history as it can
be accessed from two pages and it's important that the back link directs
the user back to the appropriate page.

--- a/app/views/allocations/history.html.erb
+++ b/app/views/allocations/history.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "/shared/backlink", :locals => { :page => prison_allocation_path(@prison, @prisoner.offender_no) } %>
+<%= link_to "Back", 'javascript:history.back()', class: "govuk-back-link govuk-!-margin-top-0 govuk-!-margin-bottom-6" %>
 
 <h1 class="govuk-heading-l"><%= @prisoner.full_name %></h1>
 
