--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -155,7 +155,7 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">Allocation history</td>
       <td class="govuk-table__cell table_cell__left_align">
-        <%=@allocation.last_event(@prisoner.offender_no) %>
+        <%= last_event(@allocation) %>
         <%= link_to 'View', prison_allocation_history_path(@prison, @prisoner.offender_no), class: "govuk-link pull-right" %>
       </td>
     </tr>
