Provide a prison debugging page.
As we don't show every single offender in prison, we have added a page
showing which offenders have been filtered out and for what reason.
Currently we only exclude offenders < 18yo, unsentenced offenders and
civil cases.  This page (/prisons/CODE/debugging/prison) is currently
only intended for internal use (although it is not restricted).

--- a/app/assets/stylesheets/gov_uk.scss
+++ b/app/assets/stylesheets/gov_uk.scss
@@ -3,3 +3,15 @@ $govuk-image-url-function: "image-url";
 $govuk-font-url-function: "asset-url";
 
 @import "govuk/all";
+
+
+.govuk-data-value {
+   @extend .govuk-heading-l;
+   margin-bottom: 0;
+}
+.govuk-grid-column-one-sixth {
+   -webkit-box-sizing: border-box;
+           box-sizing: border-box;
+   width: 100%;
+   padding: 0;
+}
