ability to override responsibility

--- a/app/views/overrides/new.html.erb
+++ b/app/views/overrides/new.html.erb
@@ -64,8 +64,7 @@
                 <% end %>
                 <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="175">
                   <div class="govuk-form-group">
-                    <label class="govuk-label" for="provide-detail">Please provide detail
-                      here</label>
+                    <label class="govuk-label" for="provide-detail">Please provide detail here</label>
                     <textarea class="govuk-textarea js-character-count govuk-textarea--error" id="more-detail" name="override[more_detail]" rows="3" aria-describedby="more-detail-hint more-detail-error"></textarea>
                   </div>
                 </div>
