Update the guidance and help routes

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,13 +5,13 @@
         <h2 class="govuk-footer__heading govuk-heading-m">Useful Links</h2>
         <ul class="govuk-footer__list">
           <li class="govuk-footer__list-item">
-            <%= link_to("Guidance", guidance_path) %>
+            <%= link_to("Help", help_path) %>
+          </li>
+          <li class="govuk-footer__list-item">
+            <%= link_to("Contact us", contact_us_path) %>
           </li>
           <li class="govuk-footer__list-item">
             <%= link_to("Feedback", "https://www.research.net/r/MM8TNLW", target: "_blank") %>
-          </li>
-          <li class="govuk-footer__list-item">
-            <%= link_to("Help", help_path) %>
           </li>
         </ul>
       </div>
