--- a/app/views/pages/help_step1.html.erb
+++ b/app/views/pages/help_step1.html.erb
@@ -33,7 +33,7 @@
 
     <p>You need to send the same list of names, roles and, (for POMs only),
       email addresses to the LSA so that they can complete
-      <%= link_to "Task 2: Set up access in Digital Prison Services", "guidance_step2" %>.</p>
+      <%= link_to "Task 2: Set up access in Digital Prison Services", "help_step2" %>.</p>
 
     <p>They will also need to access this guide.</p>
   </div>
