--- a/app/views/pages/help_step3.html.erb
+++ b/app/views/pages/help_step3.html.erb
@@ -12,7 +12,7 @@
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Warning</span>
-        Please note: This task can’t be started until <%=link_to("Task 1: List everyone using the service", "guidance_step1") %> has been completed
+        Please note: This task can’t be started until <%=link_to("Task 1: List everyone using the service", "help_step1") %> has been completed
       </strong>
     </div>
 
@@ -58,6 +58,6 @@
     <p>Save the changes by pressing keyboard shortcut F9  or the yellow ‘disk’ icon in the toolbar at the top of the screen</p>
 
 
-    <p>Let the SPO know when this task has been completed, so that they can start <%= link_to "Task 4: Update POM profiles", "guidance_step4" %>.</p>
+    <p>Let the SPO know when this task has been completed, so that they can start <%= link_to "Task 4: Update POM profiles", "help_step4" %>.</p>
   </div>
 </div>
