--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,8 +1,24 @@
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Help</h1>
+ <div class="govuk-grid-column govuk-body">
+    <div class="govuk-breadcrumbs">
+      <ul class="govuk-breadcrumbs__list">
+        <li class="govuk-breadcrumbs__list-item">
+          <a class="govuk-breadcrumbs__link" href="/">Home</a>
+        </li>
+        <li class="govuk-breadcrumbs__list-item" aria-current="page">Help</li>
+      </ul>
+      <br>
+    </div>
+
+    <h2 class="govuk-heading-l">Help</h2>
+    <ul>
       <li><%= link_to 'Getting set up', help_step0_path, class: "govuk-link" %>
-      <li><%= link_to "Updating case information", update_case_information_path,class: "govuk-link" %></li>
-      <li><%= link_to "Missing cases", missing_cases_path,class: "govuk-link" %></li>
-  </div>
-</div>
+      <li><%= link_to 'Updating case information', update_case_information_path, class: "govuk-link" %></li>
+      <li><%= link_to 'Missing cases', missing_cases_path, class: "govuk-link" %></li>
+    </ul>
+   <br>
+    <div>
+      <p class="govuk-body">You can find a guide to help you set up new users, as well as detailed instructions on how to update case information.</p>
+      <p class="govuk-body">Check the information in <%= link_to 'Missing cases', missing_cases_path, class: "govuk-link" %> if there are cases you expect to see in the service.</p>
+      <p class="govuk-body"><%= link_to 'Contact us', contact_us_path, class: "govuk-link" %> if you are not able to find the answer you need. </p>
+    </div>
+ </div>
