--- a/app/views/pages/missing_cases.html.erb
+++ b/app/views/pages/missing_cases.html.erb
@@ -1,5 +1,29 @@
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Missing cases</h1>
+<%= render :partial => "missing_cases_content", locals: { page: 0 } %>
+
+<div class="govuk-grid-column">
+  <div class="govuk-body">
+    <h2 class="govuk-heading-l">No POM allocated</h2>
+
+    <p>
+      Not every case will appear in this service. Sometimes that’s because a POM does not need
+      to be allocated.
+    </p>
+
+    <p>Before contacting us, check the offender is:</p>
+
+    <ul>
+      <li>Convicted  -  prisoners on remand do not need a POM</li>
+      <li>Over 18 years old - prisoners under 18 do not need a POM</li>
+      <li>Not a civil case</li>
+      <li>Sentenced - prisoners must have an earliest release date or parole review date in NOMIS</li>
+    </ul>
+
+    <p>
+      For more information about how case responsibility is changing under OMiC,
+      see: <%= link_to("https://intranet.noms.gsi.gov.uk/corporate/offender-management-model",
+                       "https://intranet.noms.gsi.gov.uk/corporate/offender-management-model") %>
+    </p>
+
+    <p>You can also <%=link_to("Contact us", contact_us_path) %> if you think a case is missing.</p>
   </div>
 </div>
