--- a/app/views/shared/_pagination.html.erb
+++ b/app/views/shared/_pagination.html.erb
@@ -1,43 +1,13 @@
-<% if page_data %>
 <div class="govuk-grid-row pagination">
   <div class="govuk-grid-column-one-half">
-    <div class="govuk-grid-row">
-      <ul class="links">
-        <li>
-          <% if page_data.previous? %>
-            <a href="<%= replace_param(param_name, page_data.current_page - 1) %>">&laquo; Previous</a>
-          <% else %>
-            &laquo; Previous
-          <% end %>
-        </li>
-
-        <% page_data.pages.each { |page| %>
-          <% if page.present? %>
-            <li>
-              <% if page == page_data.current_page %>
-                <%= page %>
-              <% else %>
-                <a href="<%= replace_param(param_name, page) %>"><%= page %></a>
-              <% end %>
-            </li>
-          <% else %>
-            ...
-          <% end %>
-        <% } %>
-
-        <li>
-        <% if page_data.next? %>
-          <a href="<%= replace_param(param_name, page_data.current_page + 1) %>">Next &raquo;</a>
-        <% else %>
-          Next &raquo;
-        <% end %>
-        </li>
-      </ul>
-    </div>
+    <% if data.current_page < 3 %>
+      <%= paginate data, window: 5 - data.current_page %>&nbsp;
+    <% else %>
+      <%= paginate data, window: 2 %>&nbsp;
+    <% end %>
   </div>
-
   <div class="govuk-grid-column-one-half result-count">
-    Showing <%= page_data.record_range %> of <%= page_data.total_elements %> results
+    <%= page_entries_info data %>
   </div>
 </div>
-<% end %>
+
