--- a/app/views/summary/allocated.html.erb
+++ b/app/views/summary/allocated.html.erb
@@ -11,7 +11,7 @@
 
 <section class="govuk-tabs__panel" id="allocated">
   <%= render(
-          :partial => 'shared/kaminari',
+          :partial => 'shared/pagination',
           :locals => {
               :data => @summary.offenders,
           }) %>
@@ -60,7 +60,7 @@
   </table>
 
   <%= render(
-          :partial => 'shared/kaminari',
+          :partial => 'shared/pagination',
           :locals => {
               :data => @summary.offenders,
           }) %>
