--- a/app/views/summary/pending.html.erb
+++ b/app/views/summary/pending.html.erb
@@ -11,7 +11,7 @@
 
 <section class="govuk-tabs__panel" id="awaiting-information">
   <%= render(
-          :partial => 'shared/kaminari',
+          :partial => 'shared/pagination',
           :locals => {
               :data => @summary.offenders,
           }) %>
@@ -72,7 +72,7 @@
   </table>
 
   <%= render(
-          :partial => 'shared/kaminari',
+          :partial => 'shared/pagination',
           :locals => {
               :data => @summary.offenders,
           }) %>
