switch on handover dates functionality by default and fix resultant fallout

--- a/app/views/prisoners/_community_information.html.erb
+++ b/app/views/prisoners/_community_information.html.erb
@@ -1,4 +1,4 @@
-<table class="govuk-table">
+<table class="govuk-table" id="community_information">
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__header govuk-!-width-one-half" scope="row">Community information</td>
