Use Rails helper for the href attribute in help breadcrumbs Change path of contact us form

--- a/app/views/pages/_missing_cases_content.html.erb
+++ b/app/views/pages/_missing_cases_content.html.erb
@@ -5,7 +5,7 @@
         <a class="govuk-breadcrumbs__link" href="/">Home</a>
       </li>
       <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href= "help">Help</a>
+        <a class="govuk-breadcrumbs__link" href= <%= help_path %>>Help</a>
       </li>
       <li class="govuk-breadcrumbs__list-item" aria-current="page">Missing cases</li>
     </ul>
