fixed bug with editing POM details - always showing part-time in edit screen when full-time

--- a/app/views/poms/edit.html.erb
+++ b/app/views/poms/edit.html.erb
@@ -20,12 +20,12 @@
           <div class="govuk-radios" data-module="govuk-radios">
             <div class="govuk-form-group">
               <div class="govuk-radios__item">
-                <%= radio_button_tag("edit_pom[description]", "FT", @pom.working_pattern == '1.0', id: "working_pattern-ft", class: "govuk-radios__input") %>
+                <%= radio_button_tag("edit_pom[description]", "FT", @pom.working_pattern.to_s == '1.0', id: "working_pattern-ft", class: "govuk-radios__input") %>
                 <%= label_tag "edit_pom[description]", "Full time", class: "govuk-label govuk-radios__label" %>
               </div>
               <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="part-time-conditional-1" name="edit_pom[description]" type="radio" value="PT" data-aria-controls="conditional-part-time-conditional-1" <%= 'checked="checked"' if @pom.working_pattern != '1.0'%>>
+                  <input class="govuk-radios__input" id="part-time-conditional-1" name="edit_pom[description]" type="radio" value="PT" data-aria-controls="conditional-part-time-conditional-1" <%= 'checked="checked"' if @pom.working_pattern.to_s != '1.0'%>>
                   <label class="govuk-label govuk-radios__label" for="part-time-conditional-1">
                     Part time
                   </label>
@@ -33,7 +33,7 @@
                 <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-part-time-conditional-1">
                   <% 9.downto(1).each do |value| %>
                     <div class="govuk-radios__item">
-                      <%= radio_button_tag("edit_pom[working_pattern]", "0.#{value}", @pom.working_pattern == "0.#{value}", id: "working_pattern-#{value}", class: "govuk-radios__input") %>
+                      <%= radio_button_tag("edit_pom[working_pattern]", "0.#{value}", @pom.working_pattern.to_s == "0.#{value}", id: "working_pattern-#{value}", class: "govuk-radios__input") %>
                       <%= label_tag "edit_pom[working_pattern]", "Part time 0.#{value} - #{working_pattern_to_days(value)}", class: "govuk-label govuk-radios__label" %>
                     </div>
                   <% end %>
