--- a/app/views/pages/_content.html.erb
+++ b/app/views/pages/_content.html.erb
@@ -13,59 +13,68 @@
   </div>
 
   <div class="govuk-section-break--visible">
-    <h1 class="govuk-heading-l">Getting set up</h1>
-    <p>Contents</p>
-    <ul class="govuk-list--bullet">
-      <li>
-        <% if page == 0 %>
-          Overview
-        <% else %>
-          <%= link_to "Overview", "help_step0" %>
-        <% end %>
-      </li>
-      <li>
-        <% if page == 1 %>
-          List everyone using the service
-        <% else %>
-          <%= link_to "List everyone using the service", "help_step1" %>
-        <% end %>
-      </li>
-      <li>
-        <% if page == 2 %>
-          Set up access in Digital Prison Services
-        <% else %>
-          <%= link_to "Set up access in Digital Prison Services", "help_step2" %>
-        <% end %>
-      </li>
-      <li>
-        <% if page == 3 %>
-          Set up POMs in NOMIS
-        <% else %>
-          <%= link_to "Set up POMs in NOMIS", "help_step3" %>
-        <% end %>
-      </li>
-      <li>
-        <% if page == 4 %>
-          Update POM profiles
-        <% else %>
-          <%= link_to "Update POM profiles", "help_step4" %>
-        <% end %>
-      </li>
-      <li>
-        <% if page == 5 %>
-          Update prisoner information
-        <% else %>
-          <%= link_to "Update prisoner information", "help_step5" %>
-        <% end %>
-      </li>
-      <li>
-        <% if page == 6 %>
-          Start making allocations
-        <% else %>
-          <%= link_to "Start making allocations", "help_step6" %>
-        <% end %>
-      </li>
-    </ul>
+    <h1 class="govuk-heading-xl">Getting set up</h1>
+    <nav class="gem-c-contents-list" role="navigation">
+
+      <h2 class="gem-c-contents-list__title">Contents</h2>
+
+      <ol class="gem-c-contents-list__list">
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <% if page == 0 %>
+            Overview
+          <% else %>
+            <%= link_to "Overview", "help_step0" %>
+          <% end %>
+        </li>
+
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <% if page == 1 %>
+            List everyone using the service
+          <% else %>
+            <%= link_to "List everyone using the service", "help_step1" %>
+          <% end %>
+        </li>
+
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <% if page == 2 %>
+            Set up access in Digital Prison Services
+          <% else %>
+            <%= link_to "Set up access in Digital Prison Services", "help_step2" %>
+          <% end %>
+        </li>
+
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <% if page == 3 %>
+            Set up POMs in NOMIS
+          <% else %>
+            <%= link_to "Set up POMs in NOMIS", "help_step3" %>
+          <% end %>
+        </li>
+
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <% if page == 4 %>
+            Update POM profiles
+          <% else %>
+            <%= link_to "Update POM profiles", "help_step4" %>
+          <% end %>
+        </li>
+
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <% if page == 5 %>
+            Update prisoner information
+          <% else %>
+            <%= link_to "Update prisoner information", "help_step5" %>
+          <% end %>
+        </li>
+
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <% if page == 6 %>
+            Start making allocations
+          <% else %>
+            <%= link_to "Start making allocations", "help_step6" %>
+          <% end %>
+        </li>
+      </ol>
+    </nav>
   </div>
 </div>
-<br>
