--- a/app/views/pages/help_step2.html.erb
+++ b/app/views/pages/help_step2.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "content", locals: { page: 2 } %>
 
-<h2 class="govuk-heading-l govuk-!-margin-bottom-5">Set up access in Digital Prison Services</h2>
+<h1 class="part-title">Set up access in Digital Prison Services</h1>
 <div class="govuk-inset-text">
   Local System Administrator (LSA) task
 </div>
