--- a/app/views/pages/help_step3.html.erb
+++ b/app/views/pages/help_step3.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "content", locals: { page: 3 } %>
 
-<h2 class="govuk-heading-l govuk-!-margin-bottom-5">Set up POMs in NOMIS</h2>
+<h1 class="part-title">Set up POMs in NOMIS</h1>
 <div class="govuk-inset-text">
   Local System Administrator (LSA) task
 </div>
