--- a/app/views/pages/missing_cases.html.erb
+++ b/app/views/pages/missing_cases.html.erb
@@ -2,7 +2,7 @@
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
-    <h2 class="govuk-heading-l">No POM allocation needed</h2>
+    <h1 class="part-title">No POM allocation needed</h1>
 
     <p>
       Not every case will appear in this service. Sometimes that’s because a POM does not need
