--- a/app/views/pages/_missing_cases_content.html.erb
+++ b/app/views/pages/_missing_cases_content.html.erb
@@ -13,30 +13,34 @@
   </div>
 
   <div class="govuk-section-break--visible">
-    <h1 class="govuk-heading-l">Missing cases</h1>
-    <p>Contents</p>
-    <ul class="govuk-list--bullet">
-      <li>
-        <% if page == 0 %>
-          No POM allocation needed
-        <% else %>
-          <%= link_to "No POM allocation needed", missing_cases_path %>
-        <% end %>
-      </li>
-      <li>
-        <% if page == 1 %>
-          Repatriated cases
-        <% else %>
-          <%= link_to "Repatriated cases", repatriated_path %>
-        <% end %>
-      </li>
-      <li>
-        <% if page == 2 %>
-          Scottish and Northern Irish prisoners
-        <% else %>
-          <%= link_to "Scottish and Northern Irish prisoners", scottish_northern_irish_path %>
-        <% end %>
-      </li>
-    </ul>
+    <h1 class="govuk-heading-xl">Missing cases</h1>
+    <nav class="gem-c-contents-list" role="navigation">
+      <h2 class="gem-c-contents-list__title">Contents</h2>
+      <ol class="gem-c-contents-list__list">
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <% if page == 0 %>
+            No POM allocation needed
+          <% else %>
+            <%= link_to "No POM allocation needed", missing_cases_path %>
+          <% end %>
+        </li>
+
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <% if page == 1 %>
+            Repatriated cases
+          <% else %>
+            <%= link_to "Repatriated cases", repatriated_path %>
+          <% end %>
+        </li>
+
+        <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+          <% if page == 2 %>
+            Scottish and Northern Irish prisoners
+          <% else %>
+            <%= link_to "Scottish and Northern Irish prisoners", scottish_northern_irish_path %>
+          <% end %>
+        </li>
+      </ol>
+    </nav>
   </div>
 </div>
