--- a/app/views/pages/help_step0.html.erb
+++ b/app/views/pages/help_step0.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "content", locals: { page: 0 } %>
 
-<h2 class="govuk-heading-l">Overview</h2>
+<h1 class="part-title">Overview</h1>
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
