--- a/app/views/pages/help_step1.html.erb
+++ b/app/views/pages/help_step1.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "content", locals: { page: 1 }%>
 
-<h2 class="govuk-heading-l">List everyone using the service</h2>
+<h1 class="part-title">List everyone using the service</h1>
 <div class="govuk-inset-text">
   Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) task
 </div>
