--- a/app/views/pages/help_step4.html.erb
+++ b/app/views/pages/help_step4.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "content", locals: { page: 4 } %>
 
-<h2 class="govuk-heading-l govuk-!-margin-bottom-5">Update POM profiles</h2>
+<h1 class="part-title">Update POM profiles</h1>
 <div class="govuk-inset-text">
   Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) / Case admin task
 </div>
