--- a/app/views/pages/help_step6.html.erb
+++ b/app/views/pages/help_step6.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "content", locals: { page: 6 } %>
 
-<h2 class="govuk-heading-l govuk-!-margin-bottom-5">Start making allocations</h2>
+<h1 class="part-title">Start making allocations</h1>
 <div class="govuk-inset-text">
   Senior Probation Officer / Head of Offender Management Unit (SPO/HoOMU) task
 </div>
