--- a/app/views/pages/repatriated.html.erb
+++ b/app/views/pages/repatriated.html.erb
@@ -2,7 +2,7 @@
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
-    <h2 class="govuk-heading-l">Repatriated cases</h2>
+    <h1 class="part-title">Repatriated cases</h1>
 
     <p>
       It is likely that prisoners who have returned to the UK to serve their sentence will not
