--- a/app/views/pages/scottish_northern_irish.html.erb
+++ b/app/views/pages/scottish_northern_irish.html.erb
@@ -2,7 +2,7 @@
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
-    <h2 class="govuk-heading-l">Scottish and Northern Irish prisoners</h2>
+    <h1 class="part-title">Scottish and Northern Irish prisoners</h1>
     <p>
       As Scotland and Northern Ireland do not use nDelius and will not be making POM allocations
       in line with the OMiC guidelines, you should allocate a supporting POM.
