--- a/app/views/pages/update_case_information.html.erb
+++ b/app/views/pages/update_case_information.html.erb
@@ -2,7 +2,7 @@
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
-    <h2 class="govuk-heading-l">Overview</h2>
+    <h1 class="part-title">Overview</h1>
     <p>The allocations service uses information stored in both NOMIS and nDelius. Occasionally there are conflicts in matching prisoner’s records, or key information is missing.</p>
 
     <p>It’s important that the information is kept up to date in both NOMIS and nDelius so that we make correct case matches and calculate accurate handover dates.</p>
