--- a/app/views/pages/updating_ndelius.html.erb
+++ b/app/views/pages/updating_ndelius.html.erb
@@ -2,7 +2,7 @@
 
 <div class="govuk-grid-column">
   <div class="govuk-body">
-    <h2 class="govuk-heading-l">Updating nDelius</h2>
+    <h1 class="part-title">Updating nDelius</h1>
     <p>
       You may need to ‘link’ nDelius records with information held in NOMIS before you can make
       allocations for some cases.
